--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gulp-header": "~1.8.2",
     "gulp-less": "~3.1.0",
     "semantic-ui": "~2.1.8",
-    "socket.io": "~1.4.6"
+    "socket.io": "~1.4.6",
+    "clipboard": "~1.5.10"
   }
 }
